solid/src/main/java/org/example/O/ej1/good/CalculateOperation.java
package org.example.O.ej1.good;

public interface CalculateOperation {

  void calculate();

}
