solid/src/main/java/org/example/O/ej1/Bad/CalculateOperation.java
package org.example.O.ej1.Bad;

public interface CalculateOperation {

}
